# notebooks

./: .editorconfig  .gitignore  LICENSE  pyproject.toml
data/: pokemon_emerald_seaglass_national_pokedex.csv
notebooks/: pokemon_emerald_seaglass.ipynb
notebooks/modules/: pokemon_emerald_seaglass.py
