[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [{ email = "julian.lf.olate@gmail.com", name = "olatejulian" }]
dependencies = ["pandas>=2.2.3"]
description = "Notebooks"
license = { text = "MIT" }
name = "notebooks"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["ipykernel>=6.29.5", "ruff>=0.6.9"]

[tool.ruff]
line-length = 79

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
